--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Plan what parts of your project need to be run through your pipeline",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/**"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,10 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "babel-jest": "^27.4.6",
+    "eslint": "^8.6.0",
     "jest": "^27.4.7"
   }
 }
