--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,3 +25,13 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm run lint
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          cache: npm
+      - run: npm ci
