--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "lint": "eslint src/**"
+    "lint": "eslint src/**",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,12 @@
     "@typescript-eslint/parser": "^5.9.0",
     "babel-jest": "^27.4.6",
     "eslint": "^8.6.0",
-    "jest": "^27.4.7"
+    "jest": "^27.4.7",
+    "ts-loader": "^9.2.6",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
+  },
+  "dependencies": {
+    "@actions/core": "^1.6.0"
   }
 }
