--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-          cache: npm
+#          cache: npm
       - run: npm ci
       - run: npm test
 
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-          cache: npm
+#          cache: npm
       - run: npm ci
       - run: npm run lint
 
@@ -33,5 +33,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-          cache: npm
+#          cache: npm
       - run: npm ci
+      - run: npm run build
