--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "babel-jest": "^27.4.6",
     "eslint": "^8.6.0",
     "jest": "^27.4.7",
+    "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
