--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint src/**",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "@typescript-eslint/parser": "^5.9.0",
     "babel-jest": "^27.4.6",
     "eslint": "^8.6.0",
+    "husky": "^7.0.4",
     "jest": "^27.4.7",
     "ts-jest": "^27.1.2",
     "ts-loader": "^9.2.6",
